Fix overflow

--- a/home.css
+++ b/home.css
@@ -189,7 +189,7 @@ footer {
   }
 
   header.scrolled {
-    width: calc(100% + 10px);
+    width: calc(100% + 8px);
     margin-left: -5px;
     margin-right: -5px;
     transition: all 0.3s ease;
